[package]
name = "jnix"
description = "High-level extensions to help with the usage of JNI in Rust code"
version = "0.1.1"
authors = ["Mullvad VPN <admin@mullvad.net>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["ffi", "java", "jni"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/mullvad/jnix"
edition = "2018"

[features]
derive = ["jnix-macros"]

[dependencies]
jni = "0.14"
jnix-macros = { version = "0.1.1", optional = true, path = "jnix-macros" }
once_cell = "1"
parking_lot = "0.9"

[dev-dependencies]
jnix-macros = { version = "0.1.1", path = "jnix-macros" }
