[package]
name = "jnix"
description = "High-level extensions to help with the usage of JNI in Rust code"
version = "0.4.0"
authors = ["Mullvad VPN"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["ffi", "java", "jni"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/mullvad/jnix"
edition = "2018"

[features]
derive = ["jnix-macros"]

[dependencies]
jni = "0.19"
jnix-macros = { version = "0.4.0", optional = true, path = "jnix-macros" }
once_cell = "1"
parking_lot = "0.11"

[dev-dependencies]
jnix-macros = { version = "0.4.0", path = "jnix-macros" }
