[package]
name = "jnix-macros"
description = "Companion crate to jnix that provides proc-macros for interfacing JNI with Rust"
version = "0.2.1"
authors = ["Mullvad VPN"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["ffi", "java", "jni"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/mullvad/jnix"
edition = "2018"

[lib]
# The following line is needed in order to run `cargo-readme` correctly.
# See issue: https://github.com/livioribeiro/cargo-readme/issues/32
path = "src/lib.rs"
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ['full'] }
